--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.html",
   "scripts": {
+    "deploy": "netlify deploy -s netlify-sandbox-namikingsoft -p dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
